<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualWeatherStationActivity">
    <LinearLayout
        android:layout_margin="7dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_line1"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_point1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_point2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_point3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_point4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/manual_content_point5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
    </LinearLayout>
</ScrollView>