<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NRMActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/AppTheme"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drought Mitigation"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </androidx.appcompat.widget.Toolbar>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webView"/>

<ScrollView
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/nrm_page_image"/>
    <LinearLayout
        android:layout_margin="7dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nrm_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/nrm_content_line1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/nrm_content_line2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/tabA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="A"
            android:textSize="18dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:background="@drawable/round_shape"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="Rainwater Harvesting Structures"
            android:textColor="@color/black"/>

        <ImageView
            android:src="@drawable/ic_forward"
            android:background="@color/colorPrimary"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:id="@+id/tabB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="B"
                android:textSize="18dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:background="@drawable/round_shape"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="Insitu Moisture Conservation"
                android:textColor="@color/black"/>

            <ImageView
                android:src="@drawable/ic_forward"
                android:background="@color/colorPrimary"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:id="@+id/tabC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="C"
                android:textSize="18dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:background="@drawable/round_shape"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="Micro irrigation"
                android:textColor="@color/black"/>

            <ImageView
                android:src="@drawable/ic_forward"
                android:background="@color/colorPrimary"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:id="@+id/tabD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="D"
                android:textSize="18dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <TextView
                android:background="@drawable/round_shape"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="Manual Weather Station"
                android:textColor="@color/black"/>

            <ImageView
                android:src="@drawable/ic_forward"
                android:background="@color/colorPrimary"
                android:layout_weight="0.15"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>